      - Add support for file extensions provided by printer profiles from API
      - Fix display names of origins
      - New application design
      - New field to rename project file uploaded by URL
      - New widget displaying used/free size (not-connected to printer yet)
      - New Rename and Copy actions (hidden)
      - New tool to unify icons colors
      - Fixed icons colors

0.6.0 (2021-12-17)
    * Added endpoint for control of extruder
    * Added endpoint for heatbed temperature control
    * Static web update
      - Add debug outputs to investigate project picture collision
      - Removed unnecessary colon after hostname in Dashboard
      - Switched from data.link to data.printer for settings end point
      - Add advanced upload widget
      - Printer Control Page
      - Add target temperatures to the left sidebar
      - Add possibility to send control values by Enter key press
      - Add serial number setting
      - Prevent api polling when previous requests were not handled
      - Prevent error messages flood in case of a connection problem
      - Optimize application loop
      - Add serial, CONNECT and communication state to the left side bar
    * Added size and date attributes to api/logs GET endpoint
    * Removed m_time file attribute
    * Added restriction for forbidden characters in uploaded file name
    * Added download and basic upload info to link-info page
    * Added and implemented JSON file with HW limits
    * Added api/printer/printhead GET endpoint
    * Changed variable firmware_version to firmware
    * Added LOAD/UNLOAD filament commands
    * Added disable_steppers command to api/printer/printhead
    * Implementation of farm_mode into api/settings endpoints
    * New Upload errors
      - check Content-Length header
      - check if file is uploaded complete
      - check storage free space first
      - errors refactoring
      - simple html errors
    * Changed args to kwargs for high level commands